# liars_dice

./: Cargo.toml  README.md  msgs.json
example_bots/: example_bot.py
src/: die.rs  game.rs  guess.rs  hand.rs  main.rs  player.rs  wait_for_players_to_join.rs
