[package]
name = "liars_dice"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
env_logger = "0.11.8"
futures = "0.3"
log = "0.4"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tcprs = { path = "../tcprs" }
tokio = { version = "1.47", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
indexmap = "2.12"
